tests/dev_server/errors/stories/js_module_import_bare_specifier/main.js
/* eslint-disable import-x/no-unresolved */
// above 1
// above 2
// above 3
/* before */ import "toto/file.js"; /* after */
// below 1
// below 2
// below 3
/* eslint-enable import-x/no-unresolved */
